--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
   "author": "Osvaldo",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^5.3.0",
+    "config": "^3.3.1",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.28"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.28",
+    "redux-devtools-extension": "^2.13.8"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
