--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,11 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "react-transition-group": "^4.4.1",
     "reactstrap": "^8.5.1",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "uuid": "^8.3.0"
   },
@@ -39,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy" : "http://localhost:5000/"
+  "proxy": "http://localhost:5000/"
 }
