--- a/server/package.json
+++ b/server/package.json
@@ -5,12 +5,12 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "client-install": "npm install --prefix client",
+    "client-install": "npm install --prefix ../client",
     "start": "node server.js",
-    "client": "npm start --prefix client",
+    "client": "npm start --prefix ../client",
     "server": "nodemon server.js",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix ../client && npm run build --prefix ../client"
   },
   "author": "Osvaldo",
   "license": "MIT",
@@ -22,8 +22,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.28",
-    "redux-devtools-extension": "^2.13.8"
+    "mongoose": "^5.9.28"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
